idea/testData/multiModuleHighlighting/hierarchicalExpectActualMatching/duplicateActuals/jvmAndJs/jvmAndJs.kt
package foo

actual class ExplicitlyDuplicatedByMiddleAndJs
class <error descr="[ACTUAL_MISSING] Declaration must be marked with 'actual'">ImplicitlyDuplicatedByMiddleAndJs</error>

actual class ExplicitlyDuplicatedByMiddleAndJvm
actual class ImplicitlyDuplicatedByMiddleAndJvm